--- a/index.html
+++ b/index.html
@@ -14,9 +14,51 @@
       <li>or a state</li>
     </ul>
   </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  <script>
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
-</script>
-  </body>
+  const cities = [];
+  
+  fetch(endpoint)
+  .then(blob => blob.json())
+  .then(data => cities.push(...data))
+
+  function findMatches(wordToMatch, cities){
+    return cities.filter(place => {
+     const regex = new RegExp(wordToMatch, 'gi');
+     return place.city.match(regex) || place.state.match(regex);
+
+   })
+  }
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  function displayMatches(){
+    const matchArray = findMatches(this.value, cities);
+    console.log(matchArray);
+    const html = matchArray.map(elem => {
+    
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = elem.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = elem.state.replace(regex, `<span class="hl">${this.value}</span>`);
+
+      return `
+      <li>
+         <span class="name">${cityName}, ${stateName}</span>
+         <span class="population"> ${elem.population}</span>
+      </li>
+      `;
+    }).join(''); //convert array to string
+
+    suggestions.innerHTML = html;
+  }
+
+  searchInput.addEventListener('change', displayMatches);
+  searchInput.addEventListener('keyup', displayMatches);
+
+
+
+  </script>
+</body>
 </html>
